add: one section

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -18,7 +18,7 @@ h2 {
   z-index: 0;
   left: -20px;
   border-radius: 100%;
-  filter: blur(65px);
+  // filter: blur(65px);
   fill: #0a9393;
 }
 
