--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/next-art");
+@import url("https://fonts.cdnfonts.com/css/montserrat");
 
 @tailwind base;
 @tailwind components;
@@ -11,6 +12,10 @@ body {
 
 h2 {
   @apply uppercase text-center tracking-wide text-marine font-normal font-titles;
+}
+
+h3 {
+  @apply uppercase text-center tracking-wide text-marine font-normal font-titles text-xl;
 }
 
 .elipse {
